# Spectromancer

./: .gitignore  Jenkinsfile  Jenkinsfile_backend  README.md  _Jenkinsfile  package-lock.json  package.json  play_tk.py  pyproject.toml  rough.ipynb  snakesAndLadders.py  sonar-project.properties
backend/: db.sqlite3
backend/main/: asgi.py  settings.py  urls.py  wsgi.py
backend/user_auth/: models.py  permissions.py  routers.py  serializers.py  urls.py  views.py
backend/user_auth/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.js  index.css  login.js  signup.js
frontend/src/utils/: auth.js  callAPI.js
frontend/src/utils/services/: auth.js
game/: actions.py  buff.py  game.py  player.py  slot.py
game/cards/: __init__.py  air.py  basecard.py  chaos.py  death.py  earth.py  fire.py  water.py
src/: App.tsx  index.css  login.js  login.tsx  main.tsx  signup.js
src/config/: urls.ts
src/utils/: auth.js  callAPI.js
src/utils/services/: auth.js
tests/: backend_tests.py
