[tool.poetry]
name = "spectromancer"
version = "0.1.0"
description = "Turn based strategy card game where each card has its unique effects"
authors = ["Murtaza Lightwala"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
